Finally got async bugs fixed! Fixed several other bugs along the way. Got tests running! Updated several minor features. Fixed Generator bugs as well.

--- a/test/test.html
+++ b/test/test.html
@@ -12,7 +12,7 @@
     mocha.setup('bdd');
     var assert = chai.assert;
   </script>
-  <script src="tests/test.proto"></script>
+  <script src="tests/test.pr"></script>
   <script>
     mocha.checkLeaks();
     mocha.run();
